--- a/.htaccess
+++ b/.htaccess
@@ -9,10 +9,12 @@ Options -Indexes
     <Files "config.php">
         Require all denied
     </Files>
-    <Files "config.installed.php">
-        Require all denied
-    </Files>
 </FilesMatch>
+
+# Block access to install directory after installation
+# Uncomment the following lines AFTER installation is complete and verified
+# RewriteCond %{REQUEST_URI} ^/install
+# RewriteRule . - [F,L]
 
 # Route all requests to index.php (allow assets and install to pass through)
 RewriteCond %{REQUEST_FILENAME} !-f
@@ -21,35 +23,3 @@ RewriteCond %{REQUEST_URI} !^/install
 RewriteCond %{REQUEST_URI} !^/assets
 RewriteCond %{REQUEST_URI} !^/uploads
 RewriteRule ^(.*)$ index.php?url=$1 [L,QSA]
-
-# Set default charset
-AddDefaultCharset UTF-8
-
-# Prevent access to .htaccess
-<Files .htaccess>
-    Require all denied
-</Files>
-
-# Security headers
-<IfModule mod_headers.c>
-    Header set X-Content-Type-Options "nosniff"
-    Header set X-Frame-Options "SAMEORIGIN"
-    Header set X-XSS-Protection "1; mode=block"
-</IfModule>
-
-# Enable compression
-<IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/json
-</IfModule>
-
-# Browser caching
-<IfModule mod_expires.c>
-    ExpiresActive On
-    ExpiresByType image/jpg "access plus 1 year"
-    ExpiresByType image/jpeg "access plus 1 year"
-    ExpiresByType image/gif "access plus 1 year"
-    ExpiresByType image/png "access plus 1 year"
-    ExpiresByType image/svg+xml "access plus 1 year"
-    ExpiresByType text/css "access plus 1 month"
-    ExpiresByType application/javascript "access plus 1 month"
-</IfModule>
