Add PWA support and remove legacy setup scripts
Introduces Progressive Web App (PWA) support by adding a dynamic manifest endpoint (pwa_manifest.php), a service worker (sw.js), and related meta tags and registration logic in the header. Updates configuration to support a debug_mode flag and refines error reporting logic in index.php. Removes legacy and redundant database setup and migration scripts (automigration.php, quick_setup.php, setup_database.php, application/migrate.php, database/migrations/migrate.php, application/check_view.php) to streamline deployment and maintenance.

--- a/application/config/config.installed.php.example
+++ b/application/config/config.installed.php.example
@@ -18,6 +18,7 @@ return [
         'charset' => 'utf8mb4',
         'collation' => 'utf8mb4_unicode_ci'
     ],
-    'encryption_key' => ''
+    'encryption_key' => '',
+    'debug_mode' => false
 ];
 
