Improve Booking wizard data handling and .gitignore
Enhanced the Booking_wizard controller to robustly decode and validate JSON data from POST requests, with error handling and logging for invalid input. Updated .gitignore to allow the vendor directory except for .htaccess, and added test and debug files to be ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ uploads/*
 Thumbs.db
 
 # Dependencies
-vendor/*
+# vendor/*
 !vendor/.htaccess
 
 # Temporary files
@@ -35,3 +35,5 @@ vendor/*
 .env
 .env.local
 
+tests/test_results.json
+debug_controllers.php
